# linear-regression

./: Readme.md  pyproject.toml  regression.ipynb
.ipynb_checkpoints/: regression-checkpoint.ipynb
