[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["Jana Abdelkader <janaosama1300@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
numpy = ">=1.17"
jupyterlab = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
